--- a/curriculoSara.html
+++ b/curriculoSara.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
     <meta charset="UTF8">
     <title>Sara Alves</title>
@@ -9,98 +10,101 @@
 
 <body>
     <header><strong>Desenvolvimento Web I</strong></header>
-    <hr id="hrdiferent">
 
-    <nav class="button">
-      <ul>
-         <li><a href="Index.html">Index</a></li>
+    <div id="lista">
+        <nav class="button">
+            <ul>
+                <li><a href="Index.html">Index</a></li>
 
-         <li><a href="curriculoHellen.html">Aluno 1</a></li>
+                <li><a href="curriculoHellen.html">Aluno 1</a></li>
 
-         <li><a href="curriculoSara.html">Aluno 2</a></li>
+                <li><a href="curriculoSara.html">Aluno 2</a></li>
 
-         <li><a id="aluno">Aluno 3</a></li>
+                <li><a id="aluno">Aluno 3</a></li>
 
-         <li><a href="contato.html">Contato</a></li>
-     </ul>
-    </nav>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
 
-                             <hr class="horizontal">
+    <hr width="97%" align="center" color="#800000" size="3px">
     <section id="pagina">
 
-       <section id="perfil">
+        <section id="perfil">
 
-         <img class="foto" src="Sara.jpeg" width="200" height="200">
+            <img class="foto" src="Sara.jpeg" width="200" height="200">
 
-      <div id="dados">
-         <p><strong>Nome:</strong><br> Sara Alves Vieira </p>
-             <p><strong>Nascimento:</strong><br> 09/11/2001 </p>
-             <p><strong>Telefone:</strong><br> (41)98845-2643 </p>
-             <p><strong>Estado Civil:</strong><br>Solteira</p>
-      </div>
+            <div id="dados">
+                <p><strong>Nome:</strong><br> Sara Alves Vieira </p>
+                <p><strong>Nascimento:</strong><br> 09/11/2001 </p>
+                <p><strong>Telefone:</strong><br> (41)98845-2643 </p>
+                <p><strong>Estado Civil:</strong><br>Solteira</p>
+            </div>
 
-    </section>
-
-                             <hr color="#800000">
-
-      <section id="caract">
-
-         <div class="coluna">
-                 <h1 style="color:#800000; font-size: 30px" class="lista">Educação</h1>
-         
-         <hr class="horizont">   
- 
-         <section class="estudos"> 
-
-            <div class="educa">
-
-               <h1 style="color: #a02a2a;" class="lista">Ensino Médio</h1>
-               <h1 class="local">SESI Boqueirão</h1>
-               <b>Ensino Regular</b> <br>
-   <br>
-               <i>2016-2018</i>
-   
-           </div>
-
-           <div class="educa">
-
-            <h1 style="color: #a02a2a;" class="lista">Graduação</h1>
-            <h1 class="local">Universidade Positivo</h1>
-            <b>Sistemas de Informação</b> <br>
-   <br>
-            <i>2020-2024</i>
-
-        </div>
-
-        <div class="educa">
-
-         <h1 style="color: #a02a2a;" class="lista">Especialização</h1>
-         <h1 class="local">SENAI CIC</h1>
-         <b>Eletrônico de Manutenção</b> <br>
-   <br>
-         <i>2019-2020</i>
-
-     </div>
-
-        
         </section>
 
-        <hr class="horizont">
+        <hr color="#800000">
 
-        <h1 style="color: #a02a2a; font-size: 2vw" class="lista">Experiência</h1>
+        <section id="caract">
 
-        <p>Coisas boas acontecem. Às vezes, precisamos nos esforçar muito para ver os frutos do nosso trabalho crescerem e para podermos colher. Mas pense que até a colheita do sucesso e da felicidade exige dedicação. É preciso manter o pensamento otimista, e sempre sintonizado em coisas positivas.</p>
-        </div>
+            <div class="coluna">
+                <h1 style="color: #a02a2a; font-size: 2vw" class="lista">Educação</h1>
+
+                <hr width="97%" align="center" color="#800000" size="3px">
+
+                <section class="estudos">
+
+                    <div class="educa">
+
+                        <h1 style="color: #a02a2a;" class="lista">Ensino Médio</h1>
+                        <h1 class="local">SESI Boqueirão</h1>
+                        <b>Ensino Regular</b> <br>
+                        <br>
+                        <i>2016-2018</i>
+
+                    </div>
+
+                    <div class="educa">
+
+                        <h1 style="color: #a02a2a;" class="lista">Graduação</h1>
+                        <h1 class="local">Universidade Positivo</h1>
+                        <b>Sistemas de Informação</b> <br>
+                        <br>
+                        <i>2020-2024</i>
+
+                    </div>
+
+                    <div class="educa">
+
+                        <h1 style="color: #a02a2a;" class="lista">Especialização</h1>
+                        <h1 class="local">SENAI CIC</h1>
+                        <b>Eletrônico de Manutenção</b> <br>
+                        <br>
+                        <i>2019-2020</i>
+
+                    </div>
+
+
+                </section>
+
+                <hr width="97%" align="center" color="#800000" size="3px">
+
+                <h1 style="color: #a02a2a; font-size: 2vw" class="lista">Experiência</h1>
+
+                <p>Coisas boas acontecem. Às vezes, precisamos nos esforçar muito para ver os frutos do nosso trabalho
+                    crescerem e para podermos colher. Mas pense que até a colheita do sucesso e da felicidade exige
+                    dedicação. É preciso manter o pensamento otimista, e sempre sintonizado em coisas positivas.</p>
+            </div>
+
+        </section>
 
     </section>
 
-</section>
-
-    <hr class="horizontal">
+    <hr width="97%" align="center" color="#800000" size="3px">
 
     <footer>
-      <strong>&copy; Desenvolvido por Hellen Cristina e Sara Alves - 2020</strong> 
-      </footer>
+        <strong>&copy; Desenvolvido por Hellen Cristina e Sara Alves - 2020.</strong>
+    </footer>
 
 </body>
 
