--- a/Index.html
+++ b/Index.html
@@ -3,117 +3,72 @@
 <html>
 
 <head>
-
     <title>Página Inicial</title>
-
     <link rel="stylesheet" href="Index.css">
-
 </head>
 
 <body>
 
     <header><strong>Desenvolvimento Web I</strong></header>
+    <hr width="97%" align="center" color="#800000" size="2px">
 
-             <hr width="97%" align="center" color="#800000" size="2px">
 
     <div id="lista">
-
         <nav>
-
             <ul>
                 <li><a href="curriculoHellen.html">Aluno 1</a></li>
-
                 <li><a href="curriculoSara.html">Aluno 2</a></li>
-                
-                <li><a id="aluno">Aluno 3</a></li>
-
+                <li><a href=>Aluno 3</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
-
         </nav>
-
     </div>
 
-            <hr width="97%" align="center" color="#800000" size="2px">
 
+
+    <hr width="97%" align="center" color="#800000" size="2px">
     <div id="alinhamento">
-
         <section>
-
             <div class="divs">
-
                 <article>
                     <p><strong>Tema:</strong><br> HTML e CSS </p>
-
                     <p><strong>Entrega:</strong><br> 13/04/2020 </p>
-
                     <p><strong>Horário:</strong><br> 22h00 </p>
-
                     <p><strong>Máximo de alunos:</strong><br>3</p>
-
                     <p><strong>Valor:</strong><br>2,0 pontos</p>
                 </article>
-
             </div>
-
             <hr color="#800000">
-
             <div class="divs">
-
                 <article id="hellen">
-
                     <p><strong>Aluno:</strong><br>Hellen Cristina Gurgacz Fiori </p>
-
                     <p><strong>Matrícula</strong><br>2002135</p>
-
                     <p><strong>Email:</strong><br>gurgaczzhellen@gmail.com</p>
-
                 </article>
-
             </div>
-
             <hr color="#800000">
-
             <div class="divs">
-
                 <article id="sara">
-
                     <p><strong>Aluno:</strong><br>Sara Alves Vieira </p>
-
                     <p><strong>Matrícula</strong><br>2015024</p>
-
                     <p><strong>Email:</strong><br>saraalves0911@hotmail.com</p>
-
                 </article>
-
             </div>
-
             <hr color="#800000">
-
             <div class="divs">
-
                 <article id="aluno3">
                     <p><strong>Aluno:</strong><br>Joao Pereira</p>
-
                     <p><strong>Matrícula</strong><br>4002892</p>
-
                     <p><strong>Email:</strong><br> pereirajoao@hotmail.com</p>
                 </article>
-
             </div>
 
         </section>
-
     </div>
-
     <hr width="97%" align="center" color="#800000" size="2px">
-
     <footer>
-
         &copy; Desenvolvido por Hellen Cristina e Sara Alves.
-
     </footer>
-
 </body>
 
 </html>
