--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="curriculoHellen.html">Aluno 1</a></li>
                 <li><a href="curriculoSara.html">Aluno 2</a></li>
-                <li><a href=>Aluno 3</a></li>
+                <li><a id="aluno">Aluno 3</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
