--- a/curriculoHellen.html
+++ b/curriculoHellen.html
@@ -48,7 +48,7 @@
         <section id="caract">
 
             <div class="coluna">
-                <h1 style="color: #800000; font-size: 2vw" class="lista">Educação</h1>
+                <h1 style="color: black; font-size: 2vw" class="lista">Educação</h1>
 
                 <hr width="97%" align="center" color="#800000" size="3px">
 
@@ -78,7 +78,7 @@
 
                 <hr width="97%" align="center" color="#800000" size="3px">
 
-                <h1 style="color: #800000; font-size: 2vw" class="lista">Experiência</h1>
+                <h1 style="color: black; font-size: 2vw" class="lista">Experiência</h1>
 
                 <p>Coisas boas acontecem. Às vezes, precisamos nos esforçar muito para ver os frutos do nosso trabalho
                     crescerem e para podermos colher. Mas pense que até a colheita do sucesso e da felicidade exige
