--- a/curriculoSara.html
+++ b/curriculoSara.html
@@ -48,7 +48,7 @@
         <section id="caract">
 
             <div class="coluna">
-                <h1 style="color: #800000; font-size: 2vw" class="lista">Educação</h1>
+                <h1 style="color: black; font-size: 2vw" class="lista">Educação</h1>
 
                 <hr width="97%" align="center" color="#800000" size="3px">
 
@@ -89,11 +89,9 @@
 
                 <hr width="97%" align="center" color="#800000" size="3px">
 
-                <h1 style="color: #800000; font-size: 2vw" class="lista">Experiência</h1>
+                <h1 style="color: black; font-size: 2vw" class="lista">Experiência</h1>
 
-                <p>Coisas boas acontecem. Às vezes, precisamos nos esforçar muito para ver os frutos do nosso trabalho
-                    crescerem e para podermos colher. Mas pense que até a colheita do sucesso e da felicidade exige
-                    dedicação. É preciso manter o pensamento otimista, e sempre sintonizado em coisas positivas.</p>
+                <p>"Permita-se fazer, sentir e ser, quem você é. Comcece, recomece, vá embora, se preciso for. Descomplique, não se importe tanto com os padrões, encare o medo, supere as crenças que limitam, e afaste-se de tudo aquilo que diminua a sua luz. Permita-se viver, a vida que quiser, do jeito que bem entender. Se suas escohas alimentam a sua alma, sem ferir ou passar por cima de ninguem, então está tudo bem, está tudo certo. Só vai!" - Wandy Luz</p>
             </div>
 
         </section>
