--- a/curriculoHellen.html
+++ b/curriculoHellen.html
@@ -12,16 +12,12 @@
 <body>
     <header><strong>Desenvolvimento Web I</strong></header>
     <div id="lista">
-        <nav class="button">
+        <nav>
             <ul>
                 <li><a href="Index.html">Index</a></li>
-
                 <li><a href="curriculoHellen.html">Aluno 1</a></li>
-
                 <li><a href="curriculoSara.html">Aluno 2</a></li>
-
                 <li><a id="aluno">Aluno 3</a></li>
-
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
