--- a/curriculoSara.html
+++ b/curriculoSara.html
@@ -10,23 +10,18 @@
 
 <body>
     <header><strong>Desenvolvimento Web I</strong></header>
-
     <div id="lista">
-        <nav class="button">
+        <nav>
             <ul>
                 <li><a href="Index.html">Index</a></li>
-
                 <li><a href="curriculoHellen.html">Aluno 1</a></li>
-
                 <li><a href="curriculoSara.html">Aluno 2</a></li>
-
                 <li><a id="aluno">Aluno 3</a></li>
-
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </div>
-
+    </div>
     <hr width="97%" align="center" color="#800000" size="3px">
     <section id="pagina">
 
@@ -91,7 +86,11 @@
 
                 <h1 style="color: black; font-size: 2vw" class="lista">Experiência</h1>
 
-                <p>"Permita-se fazer, sentir e ser, quem você é. Comcece, recomece, vá embora, se preciso for. Descomplique, não se importe tanto com os padrões, encare o medo, supere as crenças que limitam, e afaste-se de tudo aquilo que diminua a sua luz. Permita-se viver, a vida que quiser, do jeito que bem entender. Se suas escohas alimentam a sua alma, sem ferir ou passar por cima de ninguem, então está tudo bem, está tudo certo. Só vai!" - Wandy Luz</p>
+                <p>"Permita-se fazer, sentir e ser, quem você é. Comcece, recomece, vá embora, se preciso for.
+                    Descomplique, não se importe tanto com os padrões, encare o medo, supere as crenças que limitam, e
+                    afaste-se de tudo aquilo que diminua a sua luz. Permita-se viver, a vida que quiser, do jeito que
+                    bem entender. Se suas escohas alimentam a sua alma, sem ferir ou passar por cima de ninguem, então
+                    está tudo bem, está tudo certo. Só vai!" - Wandy Luz</p>
             </div>
 
         </section>
