--- a/contato.html
+++ b/contato.html
@@ -17,94 +17,92 @@
     <header><strong>Desenvolvimento Web I</strong></header>
 
     <hr id="hrdiferent">
-
-    <nav class="button">
-        <ul>
-            <li><a href="Index.html">Index</a></li>
-   
-            <li><a href="curriculoHellen.html">Aluno 1</a></li>
-   
-            <li><a href="curriculoSara.html">Aluno 2</a></li>
-   
-            <li><a id="aluno">Aluno 3</a></li>
-   
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
-    </nav>
+    <div id="lista">
+        <nav>
+            <ul>
+                <li><a href="Index.html">Index</a></li>
+                <li><a href="curriculoHellen.html">Aluno 1</a></li>
+                <li><a href="curriculoSara.html">Aluno 2</a></li>
+                <li><a id="aluno">Aluno 3</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <hr width="97%" align="center" color="#800000" size="4px">
 
     <section>
 
-    <fieldset>
+        <fieldset>
 
-        <legend><strong>Formulário de Contato</legend></h1>
-
-
-
-        <form action="formulario.respostas.html" method="POST"> </form>
+            <legend><strong>Formulário de Contato</legend>
+            
 
 
 
-        <label for="textname"><strong>Nome:</strong></label><br>
-
-        <input id="textname" type="txt" placeholder="Digite seu nome">
+            <form action="formulario.respostas.html" method="POST"> </form>
 
 
 
-        <br>
+            <label for="textname"><strong>Nome:</strong></label><br>
+
+            <input id="textname" type="txt" placeholder="Digite seu nome">
 
 
 
-        <label for="textemail"><strong>E-mail:</strong></label><br>
-
-        <input id="textname" type="text" placeholder="Digite seu email">
+            <br>
 
 
 
-        <br>
+            <label for="textemail"><strong>E-mail:</strong></label><br>
+
+            <input id="textname" type="text" placeholder="Digite seu email">
 
 
 
-        <label for="texttelefone"><strong>Telefone:</strong></label><br>
-
-        <input id="textname" type="text" placeholder="Digite seu telefone">
+            <br>
 
 
 
-        <br>
+            <label for="texttelefone"><strong>Telefone:</strong></label><br>
+
+            <input id="textname" type="text" placeholder="Digite seu telefone">
 
 
 
-        <label for="selectname"><strong>Prioridade:</strong></label><br>
-
-        <select id="selectname" type="selectprioridade" size=1>
-
-            <option>Alta</option>
-
-            <option>Média</option>
-
-            <option>Baixa</option>
-
-        </select>
+            <br>
 
 
 
-        <br>
+            <label for="selectname"><strong>Prioridade:</strong></label><br>
+
+            <select id="selectname" type="selectprioridade" size=1>
+
+                <option>Alta</option>
+
+                <option>Média</option>
+
+                <option>Baixa</option>
+
+            </select>
 
 
 
-        <label for="textmensagem"><strong>Mensagem:</strong></label><br>
+            <br>
 
-        <textarea name="mensagem" id="mensagem" cols="50" rows="8"></textarea>
 
-        <br>
 
-        <button><strong>Enviar</strong></button>
+            <label for="textmensagem"><strong>Mensagem:</strong></label><br>
 
-    </fieldset>
+            <textarea name="mensagem" id="mensagem" cols="50" rows="8"></textarea>
 
-</section>
+            <br>
+
+            <button><strong>Enviar</strong></button>
+
+        </fieldset>
+
+    </section>
 
     <hr width="97%" align="center" color="#800000" size="4px">
 
