--- a/contato.html
+++ b/contato.html
@@ -36,7 +36,7 @@
         <fieldset>
 
             <legend><strong>Formulário de Contato</legend>
-            
+
 
 
 
@@ -98,7 +98,7 @@
 
             <br>
 
-            <button><strong>Enviar</strong></button>
+            <button id="botao"><strong>Enviar</strong></button>
 
         </fieldset>
 
