--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,10 @@
     <div id="lista">
         <nav>
             <ul>
-                <li><a href="curriculoHellen.html">Aluno 1</a></li>
-                <li><a href="curriculoSara.html">Aluno 2</a></li>
+                <li><a href="curriculoHellen.html" title="Acesse a página do aluno 1">Aluno 1</a></li>
+                <li><a href="curriculoSara.html" title="Acesse a página do aluno 2">Aluno 2</a></li>
                 <li><a id="aluno">Aluno 3</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="contato.html" title="Acesse a pagina do contato">Contato</a></li>
             </ul>
         </nav>
     </div>
